--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yatzy Game</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -23,10 +23,16 @@
             </div>
             <button id="roll-button">Roll/Reroll Dice</button>
         </section>
+        <section id="leaderboard">
+            <h2>Leaderboard</h2>
+            <div id="leaderboard-scores">
+                <!-- Leaderboard scores will be dynamically created here -->
+            </div>
+        </section>
     </main>
     <footer>
         <p>© 2024 Yatzy Game</p>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
